--- a/templates/posts/show.html
+++ b/templates/posts/show.html
@@ -1,40 +1,23 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ user.full_name }}{% endblock %}}
+{% block title %}{{ post.title }}{% endblock %}}
 
 {% block content %}
 
 <div class="row">
 
-  {% if user.image_url %}
-  <div class="col-sm-2 col-6">
-    <img src="{{ user.image_url }}" alt="{{ user.full_name }}" class="img-fluid">
-  </div>
-  {% endif %}
+  <h1>{{ post.title }}</h1>
 
-  <div class="col-sm-10 col-12">
-    <h1>{{ user.full_name }}</h1>
+  <p>{{ post.content }}</p>
 
-    <form>
-      <button class="btn btn-primary btn-sm" formaction="/users/{{ user.id }}/edit" formmethod="GET">Edit
-      </button>
-      <button class="btn btn-danger btn-sm" formaction="/users/{{ user.id }}/delete" formmethod="POST">Delete
-      </button>
-    </form>
+  <p><i>By {{ user.full_name }}</i></p>
 
-    <h2>Posts</h2>
-    {% if user.posts %}
-    <ul>
-      {% for post in user.posts %}
-      <li><a href="/posts/{{ post.id }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    <form>
-      <button class="btn btn-primary" formaction="/users/{{ user.id }}/posts/new" formmethod="GET">Add Post
-      </button>
-    </form>
-  </div>
+  <form>
+    <button class="btn btn-primary btn-sm" formaction="/posts/{{ post.id }}/edit" formmethod="GET">Edit
+    </button>
+    <button class="btn btn-danger btn-sm" formaction="/posts/{{ post.id }}/delete" formmethod="POST">Delete
+    </button>
+  </form>
 </div>
 
 {% endblock %}
