Part 3 in progress

--- a/templates/posts/show.html
+++ b/templates/posts/show.html
@@ -12,6 +12,10 @@
 
   <p><i>By {{ user.full_name }}</i></p>
 
+  <p><b>Tags:</b>{% for tag in post.tags %} <a href="/tags/{{ tag.id }}" class="btn btn-primary btn-xs">{{ tag.name
+      }}</a> {%
+    endfor %}</p>
+
   <form>
     <button class="btn btn-primary btn-sm" formaction="/posts/{{ post.id }}/edit" formmethod="GET">Edit
     </button>
