--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -21,6 +21,16 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    {% for tag in tags %}
+    <div>
+      <input type="checkbox" class="form-control" name="selected-tags" id="{{ tag.name }}" value="{{ tag.name }}" {% if
+        tag in post.tags %}checked{% endif %}>
+      <label for="{{ tag.name }}">{{ tag.name }}</label>
+    </div>
+    {% endfor %}
+  </div>
+
   <div class="form-group text-right">
     <a href="/posts/{{ post.id }}" class="btn btn-outline-info">Cancel</a>
     <button type="submit" class="btn btn-success">Save</button>
