--- a/templates/users/new_post.html
+++ b/templates/users/new_post.html
@@ -24,6 +24,15 @@ Add Post for {{ user.full_name }}
     </div>
 
     <div class="form-group row">
+        {% for tag in tags %}
+        <div>
+            <input type="checkbox" name="selected-tags" id="{{ tag.name }}" value="{{ tag.name }}">
+            <label for="{{ tag.name }}">{{ tag.name }}</label>
+        </div>
+        {% endfor %}
+    </div>
+
+    <div class="form-group row">
         <div class="ml-auto mr-3">
             <a href="/users/{{ user.id }}" class="btn btn-info">Cancel</a>
             <button type="submit" class="btn btn-success">Add</button>
